--- a/src/main/resources/com/example/project_part2/completeMyinfo.fxml
+++ b/src/main/resources/com/example/project_part2/completeMyinfo.fxml
@@ -6,130 +6,126 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.CompletePersonalInformation">
+
+<AnchorPane fx:id="anch1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.CompletePersonalInformation">
    <children>
-      <ImageView fx:id="bckgr" fitHeight="812.0" fitWidth="1374.0" layoutX="-6.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@blue-sea-water-and-beach-from-birds-eye-view-for-background-119-medium.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="prof" fitHeight="248.0" fitWidth="282.0" layoutX="139.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="prof" fitHeight="248.0" fitWidth="282.0" layoutX="149.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@person.png" />
          </image>
       </ImageView>
-      <Button layoutX="201.0" layoutY="381.0" mnemonicParsing="false" onAction="#addprof" prefHeight="41.0" prefWidth="141.0" text="Choose Photo">
+      <Button layoutX="211.0" layoutY="391.0" mnemonicParsing="false" onAction="#addprof" prefHeight="41.0" prefWidth="141.0" text="Choose Photo">
          <font>
             <Font name="System Italic" size="16.0" />
          </font>
       </Button>
-      <Label fx:id="label1" alignment="CENTER" layoutX="557.0" layoutY="50.0" prefHeight="80.0" prefWidth="219.0" text="User name :" textFill="WHITE">
+      <Label fx:id="label1" alignment="CENTER" layoutX="567.0" layoutY="60.0" prefHeight="80.0" prefWidth="219.0" text="User name :" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <Label fx:id="label11" alignment="CENTER" layoutX="577.0" layoutY="130.0" prefHeight="80.0" prefWidth="251.0" text="Name :" textFill="WHITE">
+      <Label fx:id="label11" alignment="CENTER" layoutX="587.0" layoutY="140.0" prefHeight="80.0" prefWidth="251.0" text="Name :" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <Label fx:id="label111" alignment="CENTER" layoutX="640.0" layoutY="207.0" prefHeight="80.0" prefWidth="147.0" text="City :" textFill="WHITE">
+      <Label fx:id="label111" alignment="CENTER" layoutX="650.0" layoutY="217.0" prefHeight="80.0" prefWidth="147.0" text="City :" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <Label fx:id="label1111" alignment="CENTER" layoutX="615.0" layoutY="294.0" prefHeight="80.0" prefWidth="147.0" text="Country :" textFill="WHITE">
+      <Label fx:id="label1111" alignment="CENTER" layoutX="625.0" layoutY="304.0" prefHeight="80.0" prefWidth="147.0" text="Country :" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <Label fx:id="label11111" alignment="CENTER" layoutX="647.0" layoutY="382.0" prefHeight="80.0" prefWidth="147.0" text="Bio :" textFill="WHITE">
+      <Label fx:id="label11111" alignment="CENTER" layoutX="657.0" layoutY="392.0" prefHeight="80.0" prefWidth="147.0" text="Bio :" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <Label fx:id="label12" alignment="CENTER" layoutX="739.0" layoutY="51.0" prefHeight="80.0" prefWidth="219.0" text="---" textFill="WHITE">
+      <Label fx:id="label12" alignment="CENTER" layoutX="749.0" layoutY="61.0" prefHeight="80.0" prefWidth="219.0" text="---" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <CheckBox fx:id="male" layoutX="548.0" layoutY="483.0" mnemonicParsing="false" onAction="#malefunc" prefHeight="51.0" prefWidth="125.0" text="Male" textFill="WHITE">
+      <CheckBox fx:id="male" layoutX="558.0" layoutY="493.0" mnemonicParsing="false" onAction="#malefunc" prefHeight="51.0" prefWidth="125.0" text="Male" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
       </CheckBox>
-      <CheckBox fx:id="female" layoutX="720.0" layoutY="485.0" mnemonicParsing="false" onAction="#femalefunc" prefHeight="51.0" prefWidth="125.0" text="Female" textFill="WHITE">
+      <CheckBox fx:id="female" layoutX="730.0" layoutY="495.0" mnemonicParsing="false" onAction="#femalefunc" prefHeight="51.0" prefWidth="125.0" text="Female" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
       </CheckBox>
-      <CheckBox fx:id="marr" layoutX="721.0" layoutY="569.0" mnemonicParsing="false" onAction="#marrfunc" prefHeight="51.0" prefWidth="165.0" text="Married" textFill="WHITE">
+      <CheckBox fx:id="marr" layoutX="731.0" layoutY="579.0" mnemonicParsing="false" onAction="#marrfunc" prefHeight="51.0" prefWidth="165.0" text="Married" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
       </CheckBox>
-      <CheckBox fx:id="notmarr" layoutX="549.0" layoutY="566.0" mnemonicParsing="false" onAction="#notmarrfunc" prefHeight="51.0" prefWidth="165.0" text="Single" textFill="WHITE">
+      <CheckBox fx:id="notmarr" layoutX="559.0" layoutY="576.0" mnemonicParsing="false" onAction="#notmarrfunc" prefHeight="51.0" prefWidth="165.0" text="Single" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
       </CheckBox>
-      <Button layoutX="911.0" layoutY="642.0" mnemonicParsing="false" onAction="#Back" prefHeight="41.0" prefWidth="125.0" text="Back">
+      <Button layoutX="921.0" layoutY="652.0" mnemonicParsing="false" onAction="#Back" prefHeight="41.0" prefWidth="125.0" text="Back">
          <font>
             <Font name="System Italic" size="19.0" />
          </font>
       </Button>
-      <Button layoutX="1052.0" layoutY="640.0" mnemonicParsing="false" onAction="#Create" prefHeight="41.0" prefWidth="125.0" text="Update">
+      <Button layoutX="1062.0" layoutY="650.0" mnemonicParsing="false" onAction="#Create" prefHeight="41.0" prefWidth="125.0" text="Update">
          <font>
             <Font name="System Italic" size="19.0" />
          </font>
       </Button>
-      <Label fx:id="ordorbus" alignment="CENTER" layoutX="-20.0" layoutY="-7.0" prefHeight="80.0" prefWidth="448.0" text="User name :" textFill="WHITE">
+      <Label fx:id="ordorbus" alignment="CENTER" layoutX="-10.0" layoutY="3.0" prefHeight="80.0" prefWidth="448.0" text="User name :" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <TextField fx:id="nameF" alignment="CENTER" layoutX="763.0" layoutY="149.0" prefHeight="43.0" prefWidth="280.0" promptText="Name">
+      <TextField fx:id="nameF" alignment="CENTER" layoutX="773.0" layoutY="159.0" prefHeight="43.0" prefWidth="280.0" promptText="Name">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <TextField fx:id="Biographyf" alignment="CENTER" layoutX="770.0" layoutY="403.0" prefHeight="43.0" prefWidth="403.0" promptText="Biography">
+      <TextField fx:id="Biographyf" alignment="CENTER" layoutX="780.0" layoutY="413.0" prefHeight="43.0" prefWidth="403.0" promptText="Biography">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <TextField fx:id="Countryf" alignment="CENTER" layoutX="770.0" layoutY="314.0" prefHeight="43.0" prefWidth="280.0" promptText="Country">
+      <TextField fx:id="Countryf" alignment="CENTER" layoutX="780.0" layoutY="324.0" prefHeight="43.0" prefWidth="280.0" promptText="Country">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <TextField fx:id="cityF" alignment="CENTER" layoutX="767.0" layoutY="230.0" prefHeight="43.0" prefWidth="280.0" promptText="City">
+      <TextField fx:id="cityF" alignment="CENTER" layoutX="777.0" layoutY="240.0" prefHeight="43.0" prefWidth="280.0" promptText="City">
          <font>
             <Font size="20.0" />
          </font>
       </TextField>
-      <CheckBox fx:id="them1" layoutX="142.0" layoutY="553.0" mnemonicParsing="false" onAction="#them1func" prefHeight="51.0" prefWidth="125.0" text="Nature" textFill="WHITE">
+      <CheckBox fx:id="them1" layoutX="152.0" layoutY="563.0" mnemonicParsing="false" onAction="#them1func" prefHeight="51.0" prefWidth="125.0" text="Nature" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
       </CheckBox>
-      <CheckBox fx:id="them2" layoutX="141.0" layoutY="604.0" mnemonicParsing="false" onAction="#them2func" prefHeight="51.0" prefWidth="125.0" text="Art" textFill="WHITE">
+      <CheckBox fx:id="them2" layoutX="151.0" layoutY="614.0" mnemonicParsing="false" onAction="#them2func" prefHeight="51.0" prefWidth="125.0" text="Art" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
       </CheckBox>
-      <Label fx:id="label13" alignment="CENTER" layoutX="95.0" layoutY="497.0" prefHeight="51.0" prefWidth="219.0" text="Select theme" textFill="WHITE">
+      <Label fx:id="label13" alignment="CENTER" layoutX="105.0" layoutY="507.0" prefHeight="51.0" prefWidth="219.0" text="Select theme" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="31.0" />
          </font>
       </Label>
-      <CheckBox fx:id="them3" layoutX="141.0" layoutY="654.0" mnemonicParsing="false" onAction="#them3func" prefHeight="51.0" prefWidth="125.0" text="Dark" textFill="WHITE">
+      <CheckBox fx:id="them3" layoutX="151.0" layoutY="664.0" mnemonicParsing="false" onAction="#them3func" prefHeight="51.0" prefWidth="125.0" text="Dark" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="25.0" />
          </font>
       </CheckBox>
    </children>
-</Pane>
+</AnchorPane>
