--- a/src/main/resources/com/example/project_part2/personalpage.fxml
+++ b/src/main/resources/com/example/project_part2/personalpage.fxml
@@ -6,93 +6,87 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="PANE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.PersonalHomepage">
+<AnchorPane fx:id="anch1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.PersonalHomepage">
    <children>
-       <ImageView fx:id="bckgr" fitHeight="873.0" fitWidth="1311.0" layoutX="-4.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-           <image>
-               <Image url="@beautiful-pink-sunset-over-the-sea-in-spain-409-big.jpg" />
-           </image>
-       </ImageView>
-      <ScrollPane layoutX="282.0" layoutY="179.0" prefHeight="555.0" prefWidth="781.0">
-        <content>
-          <AnchorPane fx:id="tallpane" minHeight="0.0" minWidth="0.0" prefHeight="575.0" prefWidth="762.0" />
-        </content>
+      <ScrollPane layoutX="292.0" layoutY="189.0" prefHeight="555.0" prefWidth="781.0" AnchorPane.bottomAnchor="5.7999999999999545" AnchorPane.leftAnchor="282.4" AnchorPane.rightAnchor="236.0">
+         <content>
+            <AnchorPane fx:id="tallpane" minHeight="0.0" minWidth="0.0" prefHeight="575.0" prefWidth="762.0" />
+         </content>
       </ScrollPane>
-      <Label fx:id="label1" alignment="CENTER" layoutX="1093.0" layoutY="130.0" prefHeight="43.0" prefWidth="193.0" text="Label" textFill="WHITE">
+      <Label fx:id="label1" alignment="CENTER" layoutX="1103.0" layoutY="140.0" prefHeight="43.0" prefWidth="193.0" text="Label" textFill="WHITE">
          <font>
             <Font name="Footlight MT Light" size="24.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutX="75.0" layoutY="2.0" prefHeight="85.0" prefWidth="281.0" text="OWL Messenger" textFill="WHITE">
+      <Label alignment="CENTER" layoutX="85.0" layoutY="12.0" prefHeight="85.0" prefWidth="281.0" text="OWL Messenger" textFill="WHITE">
          <font>
             <Font name="Rage Italic" size="45.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#babbbc" height="613.0" layoutX="54.0" layoutY="116.0" opacity="0.58" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.5" width="146.0" />
-      <ImageView fx:id="but1func" accessibleRole="BUTTON" fitHeight="162.0" fitWidth="163.0" layoutX="44.0" layoutY="96.0" pickOnBounds="true" preserveRatio="true">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#babbbc" height="613.0" layoutX="64.0" layoutY="126.0" opacity="0.58" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.5" width="146.0" AnchorPane.bottomAnchor="10.5" AnchorPane.leftAnchor="63.30000000000001" AnchorPane.rightAnchor="1089.5" AnchorPane.topAnchor="125.10000000000002" />
+      <ImageView fx:id="but1func" accessibleRole="BUTTON" fitHeight="162.0" fitWidth="163.0" layoutX="54.0" layoutY="106.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@icon/addpost.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="but1func1" accessibleRole="BUTTON" fitHeight="133.0" fitWidth="130.0" layoutX="62.0" layoutY="319.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="but1func1" accessibleRole="BUTTON" fitHeight="133.0" fitWidth="130.0" layoutX="72.0" layoutY="329.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@icon/addstory.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="but1func11" accessibleRole="BUTTON" fitHeight="104.0" fitWidth="76.0" layoutX="98.0" layoutY="629.0" pickOnBounds="true" preserveRatio="true" rotate="-28.0">
+      <ImageView fx:id="but1func11" accessibleRole="BUTTON" fitHeight="104.0" fitWidth="76.0" layoutX="108.0" layoutY="639.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@icon/direct.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="but1func2" accessibleRole="BUTTON" fitHeight="138.0" fitWidth="130.0" layoutX="63.0" layoutY="221.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="but1func2" accessibleRole="BUTTON" fitHeight="138.0" fitWidth="130.0" layoutX="73.0" layoutY="231.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@icon/profile.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="but1func3" accessibleRole="BUTTON" fitHeight="117.0" fitWidth="97.0" layoutX="79.0" layoutY="542.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="but1func3" accessibleRole="BUTTON" fitHeight="117.0" fitWidth="97.0" layoutX="89.0" layoutY="552.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@icon/network.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="but1func21" accessibleRole="BUTTON" fitHeight="91.0" fitWidth="87.0" layoutX="86.0" layoutY="434.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="but1func21" accessibleRole="BUTTON" fitHeight="91.0" fitWidth="87.0" layoutX="96.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@icon/suggestion.png" />
          </image>
       </ImageView>
-      <Button fx:id="newpost" layoutX="82.0" layoutY="134.0" mnemonicParsing="false" onAction="#newpost" opacity="0.0" prefHeight="87.0" prefWidth="89.0" text="Button" />
-      <Button fx:id="myinfo" layoutX="85.0" layoutY="241.0" mnemonicParsing="false" onAction="#myinfo" opacity="0.0" prefHeight="87.0" prefWidth="89.0" text="Button" />
-      <Button fx:id="newstory" layoutX="86.0" layoutY="352.0" mnemonicParsing="false" onAction="#newstory" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="Button" />
-      <Button fx:id="sugg" layoutX="88.0" layoutY="452.0" mnemonicParsing="false" onAction="#sugg" opacity="0.0" prefHeight="51.0" prefWidth="81.0" text="Button" />
-      <Button fx:id="contact" layoutX="86.0" layoutY="560.0" mnemonicParsing="false" onAction="#contact" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="Button" />
-      <Button fx:id="direct" layoutX="86.0" layoutY="644.0" mnemonicParsing="false" onAction="#direct" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="Button" />
-      <ScrollPane layoutX="378.0" layoutY="44.0" prefHeight="100.0" prefWidth="676.0">
-        <content>
-          <AnchorPane fx:id="stories" minHeight="0.0" minWidth="0.0" prefHeight="84.0" prefWidth="754.0" />
-        </content>
+      <Button fx:id="newpost" layoutX="92.0" layoutY="144.0" mnemonicParsing="false" onAction="#newpost" opacity="0.0" prefHeight="87.0" prefWidth="89.0" text="Button" />
+      <Button fx:id="myinfo" layoutX="95.0" layoutY="251.0" mnemonicParsing="false" onAction="#myinfo" opacity="0.0" prefHeight="87.0" prefWidth="89.0" text="Button" />
+      <Button fx:id="newstory" layoutX="96.0" layoutY="362.0" mnemonicParsing="false" onAction="#newstory" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="Button" />
+      <Button fx:id="sugg" layoutX="98.0" layoutY="462.0" mnemonicParsing="false" onAction="#sugg" opacity="0.0" prefHeight="51.0" prefWidth="81.0" text="Button" />
+      <Button fx:id="contact" layoutX="96.0" layoutY="570.0" mnemonicParsing="false" onAction="#contact" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="Button" />
+      <Button fx:id="direct" layoutX="96.0" layoutY="654.0" mnemonicParsing="false" onAction="#direct" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="Button" AnchorPane.bottomAnchor="30.400000000000006" />
+      <ScrollPane layoutX="388.0" layoutY="54.0" prefHeight="100.0" prefWidth="676.0" AnchorPane.bottomAnchor="596.0" AnchorPane.leftAnchor="388.0" AnchorPane.rightAnchor="236.0">
+         <content>
+            <AnchorPane fx:id="stories" minHeight="0.0" minWidth="0.0" prefHeight="84.0" prefWidth="754.0" />
+         </content>
       </ScrollPane>
-      <ImageView fitHeight="71.0" fitWidth="74.0" layoutX="1200.0" layoutY="659.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="71.0" fitWidth="74.0" layoutX="1210.0" layoutY="669.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@icon/off.png" />
          </image>
       </ImageView>
-      <Button layoutX="1197.0" layoutY="659.0" mnemonicParsing="false" onAction="#exit" opacity="0.0" prefHeight="75.0" prefWidth="74.0" text="Button" />
-      <ImageView fitHeight="75.0" fitWidth="81.0" layoutX="1095.0" layoutY="656.0" pickOnBounds="true" preserveRatio="true">
+      <Button layoutX="1207.0" layoutY="669.0" mnemonicParsing="false" onAction="#exit" opacity="0.0" prefHeight="75.0" prefWidth="74.0" text="Button" AnchorPane.bottomAnchor="5.799999999999997" AnchorPane.leftAnchor="1207.0" AnchorPane.rightAnchor="18.599999999999994" />
+      <ImageView fitHeight="75.0" fitWidth="81.0" layoutX="1105.0" layoutY="666.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@icon/B.png" />
          </image>
       </ImageView>
-      <Button layoutX="1091.0" layoutY="657.0" mnemonicParsing="false" onAction="#BACKtologin" opacity="0.0" prefHeight="75.0" prefWidth="74.0" text="Button" />
-      <ImageView fitHeight="65.0" fitWidth="74.0" layoutX="13.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+      <Button layoutX="1109.0" layoutY="669.0" mnemonicParsing="false" onAction="#BACKtologin" opacity="0.0" prefHeight="75.0" prefWidth="74.0" text="Button" AnchorPane.bottomAnchor="5.7999999999999545" AnchorPane.leftAnchor="1109.0" AnchorPane.rightAnchor="116.59999999999991" />
+      <ImageView fitHeight="65.0" fitWidth="74.0" layoutX="23.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@icon/AppIcon.png" />
          </image>
       </ImageView>
-      <Button layoutX="19.0" layoutY="16.0" mnemonicParsing="false" onAction="#intro" opacity="0.0" prefHeight="65.0" prefWidth="298.0" text="Button" />
-      <ImageView fx:id="proffield" fitHeight="124.0" fitWidth="141.0" layoutX="1132.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="1115.0" layoutY="10.0" mnemonicParsing="false" onAction="#viewLoginuser" opacity="0.0" prefHeight="146.0" prefWidth="166.0" text="Button" />
+      <Button layoutX="29.0" layoutY="26.0" mnemonicParsing="false" onAction="#intro" opacity="0.0" prefHeight="65.0" prefWidth="298.0" text="Button" />
+      <ImageView fx:id="proffield" fitHeight="124.0" fitWidth="141.0" layoutX="1142.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="1125.0" layoutY="20.0" mnemonicParsing="false" onAction="#viewLoginuser" opacity="0.0" prefHeight="146.0" prefWidth="166.0" text="Button" AnchorPane.bottomAnchor="583.6" AnchorPane.rightAnchor="8.599999999999994" />
    </children>
-</Pane>
+</AnchorPane>
