--- a/src/main/resources/com/example/project_part2/suggestion.fxml
+++ b/src/main/resources/com/example/project_part2/suggestion.fxml
@@ -9,75 +9,69 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="PANE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.Suggestions">
+<AnchorPane fx:id="anch1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_part2.Suggestions">
    <children>
-      <ImageView fx:id="bckgr" fitHeight="982.0" fitWidth="1372.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@destroyairplane.jpg" />
-         </image>
-      </ImageView>
-      <ScrollPane layoutX="167.0" layoutY="205.0" prefHeight="496.0" prefWidth="746.0">
+      <ScrollPane layoutX="177.0" layoutY="215.0" prefHeight="496.0" prefWidth="746.0" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="177.0" AnchorPane.rightAnchor="376.6">
          <content>
             <AnchorPane fx:id="tallpane" minHeight="0.0" minWidth="0.0" prefHeight="550.0" prefWidth="730.0" />
          </content>
       </ScrollPane>
-      <CheckBox fx:id="hash" layoutX="79.0" layoutY="44.0" mnemonicParsing="false" onAction="#hashfill" prefHeight="57.0" prefWidth="194.0" text="search Hashtag" textFill="#fffcfc">
+      <CheckBox fx:id="hash" layoutX="89.0" layoutY="54.0" mnemonicParsing="false" onAction="#hashfill" prefHeight="57.0" prefWidth="194.0" text="search Hashtag" textFill="#fffcfc" AnchorPane.bottomAnchor="638.4" AnchorPane.leftAnchor="88.99999999999997" AnchorPane.rightAnchor="1016.6">
          <font>
             <Font size="22.0" />
          </font>
       </CheckBox>
-      <CheckBox fx:id="bus" layoutX="79.0" layoutY="99.0" mnemonicParsing="false" onAction="#busfill" prefHeight="39.0" prefWidth="194.0" text="search Business" textFill="WHITE">
+      <CheckBox fx:id="bus" layoutX="89.0" layoutY="109.0" mnemonicParsing="false" onAction="#busfill" prefHeight="39.0" prefWidth="194.0" text="search Business" textFill="WHITE" AnchorPane.bottomAnchor="601.8" AnchorPane.leftAnchor="88.99999999999997" AnchorPane.rightAnchor="1016.6">
          <font>
             <Font size="22.0" />
          </font>
       </CheckBox>
-      <TextField fx:id="post" alignment="CENTER" layoutX="413.0" layoutY="146.0" prefHeight="38.0" prefWidth="225.0" promptText="Search">
+      <TextField fx:id="post" alignment="CENTER" layoutX="423.0" layoutY="156.0" prefHeight="38.0" prefWidth="225.0" promptText="Search" AnchorPane.bottomAnchor="554.0" AnchorPane.leftAnchor="423.0" AnchorPane.rightAnchor="651.4">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <ScrollPane layoutX="974.0" layoutY="203.0" prefHeight="501.0" prefWidth="240.0">
+      <ScrollPane layoutX="984.0" layoutY="213.0" prefHeight="501.0" prefWidth="240.0" AnchorPane.bottomAnchor="35.39999999999998" AnchorPane.leftAnchor="984.0" AnchorPane.rightAnchor="76.0">
          <content>
             <AnchorPane fx:id="tallpaneuser" minHeight="0.0" minWidth="0.0" prefHeight="550.0" prefWidth="224.0" />
          </content>
       </ScrollPane>
-      <TextField fx:id="user" alignment="CENTER" layoutX="980.0" layoutY="146.0" prefHeight="40.0" prefWidth="196.0" promptText="Search user">
+      <TextField fx:id="user" alignment="CENTER" layoutX="990.0" layoutY="156.0" prefHeight="40.0" prefWidth="196.0" promptText="Search user" AnchorPane.bottomAnchor="554.0" AnchorPane.leftAnchor="990.0" AnchorPane.rightAnchor="114.0">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <ImageView fitHeight="81.0" fitWidth="97.0" layoutX="34.0" layoutY="637.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="81.0" fitWidth="97.0" layoutX="44.0" layoutY="647.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="43.400000000000006" AnchorPane.rightAnchor="1175.0">
          <image>
             <Image url="@icon/download-icon-home+home+page+house+icon-1320166594187533872_256.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" layoutX="1003.0" layoutY="93.0" prefHeight="39.0" prefWidth="165.0" text="Suggested for you">
+      <Label alignment="CENTER" layoutX="1013.0" layoutY="103.0" prefHeight="39.0" prefWidth="165.0" text="Suggested for you" AnchorPane.bottomAnchor="607.8" AnchorPane.leftAnchor="1012.9999999999999" AnchorPane.rightAnchor="121.4">
          <font>
             <Font name="Footlight MT Light" size="19.0" />
          </font>
       </Label>
-      <Button layoutX="50.0" layoutY="654.0" mnemonicParsing="false" onAction="#home" opacity="0.0" prefHeight="48.0" prefWidth="49.0" text="Button" />
-      <ChoiceBox fx:id="bis" layoutX="438.0" layoutY="80.0" prefHeight="41.0" prefWidth="179.0" />
-      <ImageView fitHeight="68.0" fitWidth="54.0" layoutX="1188.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
+      <Button layoutX="60.0" layoutY="664.0" mnemonicParsing="false" onAction="#home" opacity="0.0" prefHeight="48.0" prefWidth="49.0" text="Button" />
+      <ChoiceBox fx:id="bis" layoutX="448.0" layoutY="90.0" prefHeight="41.0" prefWidth="179.0" AnchorPane.bottomAnchor="618.4" AnchorPane.leftAnchor="448.00000000000006" AnchorPane.rightAnchor="672.8" />
+      <ImageView fitHeight="68.0" fitWidth="54.0" layoutX="1198.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="546.0" AnchorPane.leftAnchor="1197.6" AnchorPane.rightAnchor="48.0">
          <image>
             <Image url="@icon/search.png" />
          </image>
       </ImageView>
-      <Button fx:id="getuser" layoutX="1190.0" layoutY="144.0" mnemonicParsing="false" onAction="#getuser" opacity="0.0" prefHeight="41.0" prefWidth="52.0" text="Button" />
-      <ImageView fx:id="searchpost" fitHeight="68.0" fitWidth="54.0" layoutX="649.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true">
+      <Button fx:id="getuser" layoutX="1200.0" layoutY="154.0" mnemonicParsing="false" onAction="#getuser" opacity="0.0" prefHeight="41.0" prefWidth="52.0" text="Button" AnchorPane.bottomAnchor="554.4" AnchorPane.leftAnchor="1200.0" AnchorPane.rightAnchor="48.0" />
+      <ImageView fx:id="searchpost" fitHeight="68.0" fitWidth="54.0" layoutX="659.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="548.0" AnchorPane.leftAnchor="658.6" AnchorPane.rightAnchor="587.0">
          <image>
             <Image url="@icon/search.png" />
          </image>
       </ImageView>
-      <Button fx:id="getuser1" layoutX="650.0" layoutY="139.0" mnemonicParsing="false" onAction="#getpost" opacity="0.0" prefHeight="51.0" prefWidth="52.0" text="Button" />
-      <ImageView fx:id="searchpost1" fitHeight="68.0" fitWidth="54.0" layoutX="629.0" layoutY="77.0" pickOnBounds="true" preserveRatio="true">
+      <Button fx:id="getuser1" layoutX="660.0" layoutY="149.0" mnemonicParsing="false" onAction="#getpost" opacity="0.0" prefHeight="51.0" prefWidth="52.0" text="Button" AnchorPane.bottomAnchor="611.8" AnchorPane.leftAnchor="642.0" AnchorPane.rightAnchor="606.0" />
+      <ImageView fx:id="searchpost1" fitHeight="68.0" fitWidth="54.0" layoutX="639.0" layoutY="87.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="609.0" AnchorPane.leftAnchor="658.6" AnchorPane.rightAnchor="587.4">
          <image>
             <Image url="@icon/search.png" />
          </image>
       </ImageView>
-      <Button fx:id="getuser11" layoutX="632.0" layoutY="77.0" mnemonicParsing="false" onAction="#getpost" opacity="0.0" prefHeight="51.0" prefWidth="52.0" text="Button" />
+      <Button fx:id="getuser11" layoutX="642.0" layoutY="87.0" mnemonicParsing="false" onAction="#getpost" opacity="0.0" prefHeight="51.0" prefWidth="52.0" text="Button" AnchorPane.bottomAnchor="611.8" AnchorPane.leftAnchor="642.0" AnchorPane.rightAnchor="606.0" />
    </children>
-</Pane>
+</AnchorPane>
